# cody

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  cooccurence_matrix.ipynb  dacos.ipynb  david.import.ipynb  david.ipynb  langgraph.json  pyproject.toml  requirements.txt  rok.ipynb  rok_evals.ipynb  vectorstore.ipynb
backend/: .gitignore  requirements.txt
backend/src/: care_optimize.ipynb
src/agent/: __init__.py  abbrev_node.py  graph copy.py  graph.py  state.py  types.py  utils.py
src/agent/graph/: generate_data.py  graph.py
src/agent/http/: debug.py
tests/: evals.py  evals_hard.py  test_graph.py
viewer/: index.html  package.json  pnpm-lock.yaml
viewer/src/: App copy.tsx  App.tsx  fetcher.mts  main.css  main.tsx  vite-env.d.ts
viewer/src/components/: billing-code-generator.tsx  pojistna-udalost-form.tsx  vysledky-analyzy.tsx
viewer/src/data/: json.tsx
