[project]
name = "023-rakathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.0",
]
